--- a/css/style_old.css
+++ b/css/style_old.css
@@ -117,7 +117,7 @@ body,
 }
 body {
   background: #eee;
-  font: 16px -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font: 14px -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-text-size-adjust: 100%;
 }
 .outer {
@@ -341,9 +341,8 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("images/banner-2.jpg") center #000;
+  background: url("images/banner.jpg") center #000;
   background-size: cover;
-  background-repeat: no-repeat;
   z-index: -1;
 }
 #header-title {
@@ -365,13 +364,11 @@ body {
   font-size: 40px;
   line-height: 40px;
   letter-spacing: 2px;
-  font-weight: 600;
 }
 #subtitle {
-  font-size: 18px;
+  font-size: 16px;
   line-height: 16px;
   letter-spacing: 1px;
-  font-weight: 600;
 }
 #subtitle-wrap {
   margin-top: 16px;
@@ -384,7 +381,7 @@ body {
 .main-nav-link {
   float: left;
   color: #fff;
-  /* opacity: 0.6; */
+  opacity: 0.6;
   text-decoration: none;
   text-shadow: 0 1px rgba(0,0,0,0.2);
   -webkit-transition: opacity 0.2s;
@@ -397,7 +394,6 @@ body {
 .nav-icon:hover,
 .main-nav-link:hover {
   opacity: 1;
-  font-weight: 900;
 }
 .nav-icon {
   text-align: center;
